update layout and styling

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <h5>Search Your Next Adventure</h5>
                         <div>
                             <span><i class="ri-map-pin-line"></i></span>
-                            <input type="text" placeholder="Select Destination">
+                                <input id="destination" name="destination" type="text" placeholder="Select Destination" autocomplete="off">
                         </div>                    
                     </div>
                 
@@ -187,7 +187,7 @@
                         <h5>Date</h5>
                         <div>
                             <span><i class="ri-calendar-2-line"></i></span>
-                            <input type="text" placeholder="Select Date">
+                            <input id="date" name="date" type="text" placeholder="Select Date" autocomplete="off">
                         </div>
                     </div>
                 </div>
