--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <form action="/">
                 <div class="input_row">
                     <div class="input_group">
-                        <h5>Search Your Next Adventure</h5>
+                        <h5>Destination</h5>
                         <div>
                             <span><i class="ri-map-pin-line"></i></span>
                                 <input id="destination" name="destination" type="text" placeholder="Select Destination" autocomplete="off">
